work-break in table

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
     <title>Phan Ngọc Hoàng Anh</title>
 </head>
 
@@ -69,7 +69,7 @@
                         </li>
                         <li>
                             <span class="resume__skill-name">Python</span>
-                            <span class="resume__skill-bar" data-skill="2"></span>
+                            <span class="resume__skill-bar" data-skill="1"></span>
                         </li>
                         <li>
                             <span class="resume__skill-name">UX/UI</span>
@@ -91,14 +91,14 @@
                 </section>
                 <section class="resume__block">
                     <h3><span>Học vấn</span></h3>
-                    <table class="resume__education">
+                    <table class="timeline">
                         <tr>
-                            <td class="resume__education-time">10/2020</td>
-                            <td class="resume__education-info">
-                                <h4 class="resume__education-school">
+                            <td class="timeline__time">10/2020</td>
+                            <td class="timeline__info">
+                                <h4 class="timeline__title">
                                     Đại học Tôn Đức Thắng
                                 </h4>
-                                <p class="resume__education-detail">
+                                <p class="timeline__detail">
                                     Ngành: Kỹ thuật phần mềm
                                 </p>
                             </td>
@@ -107,26 +107,26 @@
                 </section>
                 <section class="resume__block">
                     <h3><span>Dự án</span></h3>
-                    <table class="resume__education">
+                    <table class="timeline">
                         <tr>
-                            <td class="resume__education-time">2019</td>
-                            <td class="resume__education-info">
-                                <h4 class="resume__education-school">
+                            <td class="timeline__time">2019</td>
+                            <td class="timeline__info">
+                                <h4 class="timeline__title">
                                     Hệ thống xếp hạng thành viên và Extension tra cứu thứ hạng thành viên trong nhóm
                                     Facebook
                                 </h4>
-                                <p class="resume__education-detail">
+                                <p class="timeline__detail">
                                 <p>Hệ thống xếp hạng thành viên nhóm ITRUM (Nhóm đã ngưng hoạt động)</p>
                                 </p>
                             </td>
                         </tr>
                         <tr>
-                            <td class="resume__education-time">11/2020</td>
-                            <td class="resume__education-info">
-                                <h4 class="resume__education-school">
+                            <td class="timeline__time">11/2020</td>
+                            <td class="timeline__info">
+                                <h4 class="timeline__title">
                                     Thiết kế thiệp điện tử 20/11
                                 </h4>
-                                <p class="resume__education-detail">
+                                <p class="timeline__detail">
                                 <p>
                                     Cuộc thi thiết kế thiệp điện tử chào mừng ngày 20/11 do Khoa CNTT - CLB ICON của
                                     trường tổ chức
@@ -137,25 +137,25 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="resume__education-time">Hiện tại</td>
-                            <td class="resume__education-info">
+                            <td class="timeline__time">Hiện tại</td>
+                            <td class="timeline__info">
 
-                                <h4 class="resume__education-school">
+                                <h4 class="timeline__title">
                                     Một vài dự án nhỏ trên CodePen
                                 </h4>
-                                <p class="resume__education-detail">
+                                <p class="timeline__detail">
                                     <a href="https://codepen.io/teoanhss113/"
                                         target="_blank">https://codepen.io/teoanhss113/</a>
                                 </p>
                             </td>
                         </tr>
                         <tr>
-                            <td class="resume__education-time">Hiện tại</td>
-                            <td class="resume__education-info">
-                                <h4 class="resume__education-school">
+                            <td class="timeline__time">Hiện tại</td>
+                            <td class="timeline__info">
+                                <h4 class="timeline__title">
                                     Một vài dự án nhỏ trên Github
                                 </h4>
-                                <p class="resume__education-detail">
+                                <p class="timeline__detail">
                                     <a href="https://github.com/teoanhss113"
                                         target="_blank">https://github.com/teoanhss113</a>
                                 </p>
